public/css/landing/style.css
/* ... */
.footer__wrapper-inner-social-subscribe-input::placeholder {
  color: var(--text-color);
  font-family: inherit;
  font-size: initial;
  font-weight: 500;
  line-height: var(--line-height-22);
}

.footer__wrapper-inner-social-subscribe-btn {
  background: var(--button-background-color-dark);
  border-radius: 4.3px;
  border: 0.752783px solid var(--button-border-color-dark);
  box-shadow: inset 0px -3.28005px 0px var(--button-border-color);
  color: var(--background-color);
  font-family: var(--font-family-code);
  font-feature-settings: 'salt'on;
  font-size: var(--font-size-h8);
  font-weight: 600;
  /* TODO: convert to var */
  line-height: calc(33 / 14);
  padding: 5px 17px;
  position: absolute;
  right: 0;
  top: 0;
}

.footer__wrapper-inner-social-subscribe-btn:hover {
  background: var(--button-background-color-light);
  border: 0.752783px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
  will-change: background, color, border, box-shadow;
}

.footer__wrapper-inner-social-links {
  display: flex;
  gap: 37px;
}

.footer__wrapper-inner-social-links a {
  height: 28px;
}

.footer__wrapper-inner-social-links svg {
  width: 100%;
  height: 100%;
}

.footer__wrapper-bottom {
  display: flex;
  gap: 160px;
  padding: 50px 0;
  /* TODO: change it to var*/
  border-top: 1px solid hsla(0, 0%, 74%);
}

.footer__wrapper-bottom-text {
  color: var(--button-background-color-dark);
  font-size: initial;
  font-weight: 600;
  line-height: var(--line-height-base);
  opacity: 0.9;
}

.footer__wrapper-bottom-text a {
  color: inherit;
  text-decoration: underline;
  text-underline-offset: 4px;
}

.footer__wrapper-bottom-text-about {
  padding-bottom: 32px;
}

/* Footer section end */

